# game-2048

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  TODOs.md  ideas.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ai-agents.md  architecture.md
game_2048/: __init__.py  core.py  gui.py  terminal.py
game_2048/agents/: __init__.py  base.py  expectimax.py  greedy.py  mcts.py  minimax.py  random.py  runner.py
game_2048/sounds/: generate_sounds.py
results/: GreedyAgent_results_20250904_001328.json  GreedyAgent_results_20250904_001338.json  GreedyAgent_results_20250904_001431.json  RandomAgent_results_20250903_234710.json  RandomAgent_results_20250904_000310.json  RandomAgent_results_20250904_000710.json  RandomAgent_results_20250904_001333.json  RandomAgent_results_20250904_001435.json
tests/: test_edge_cases.py  test_game_logic.py  test_game_states.py  test_merging.py  test_movements.py
