[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-2048"
version = "0.1.0"
description = "2048 puzzle game with AI agents for machine learning research"
authors = [{name = "AI Learning Project"}]
dependencies = [
    "numpy>=1.20.0",
    "PySide6>=6.6.0",
    "pytest>=6.0.0"
]
requires-python = ">=3.9"

[project.scripts]
2048-terminal = "game_2048.terminal:main"
2048-gui = "game_2048.gui:main"
2048-ai = "game_2048.agents.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["game_2048*"]