[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-2048"
version = "0.1.0"
description = "2048 puzzle game with AI agents for machine learning research"
authors = [{name = "AI Learning Project"}]
dependencies = [
    "numpy>=1.20.0",
    "PySide6>=6.6.0",
    "pytest>=6.0.0"
]
requires-python = ">=3.9"

[project.scripts]
2048-terminal = "game_2048.terminal:main"
2048-gui = "game_2048.gui:main"
2048-ai = "game_2048.agents.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["game_2048*"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort
]
ignore = [
    "E501",  # Line too long (Black handles this)
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E", "W", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Black configuration (compatible with Ruff)
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "PySide6.*",
]
ignore_missing_imports = true
